- fix for overflow issue

--- a/HybridMenu-addon/src/main/webapp/VAADIN/addons/hybrid-menu/hybrid-menu.scss
+++ b/HybridMenu-addon/src/main/webapp/VAADIN/addons/hybrid-menu/hybrid-menu.scss
@@ -292,7 +292,7 @@ $hybrid-menu-font-color: rgb(245, 245, 245) !default;
     .kdHybridMenuLeft .subMenu
     {
         // border-left: 1px solid rgb(230, 230, 230); // this breaks the hover effect
-        margin: 0 0 0 25px;
+        padding: 0 0 0 25px;
         width: calc(100% - 25px);
         overflow: hidden;
         position: relative;
